--- a/Amazon/Amazon/Info.plist
+++ b/Amazon/Amazon/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Allow us to use your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow us to use your location</string>
 	<key>NSCameraUsageDescription</key>
 	<string>allow camera</string>
 	<key>NSPhotoLibraryUsageDescription</key>
